--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  height: 100vh;
+  width: 100vw;
+  display:flex;
+  justify-content: center;
+  align-items: center;
   background: linear-gradient(
       to bottom,
       transparent,
